fix for intro modal on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,14 +156,6 @@ li.encryption.active {
 	z-index: 99999;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,.5);
-	text-align: center;
-	top: 0;
-	display: none;
-}
-
-.intro-modal {
-	font-family: "Montserrat", "Arial", sans-serif;
 	background: #f7931a; /* Old browsers */
 	background: -moz-linear-gradient(top,  #f7931a 0%, #f48200 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7931a), color-stop(100%,#f48200)); /* Chrome,Safari4+ */
@@ -172,13 +164,15 @@ li.encryption.active {
 	background: -ms-linear-gradient(top,  #f7931a 0%,#f48200 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #f7931a 0%,#f48200 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7931a', endColorstr='#f48200',GradientType=0 ); /* IE6-9 */
-	width: 50%;
+	text-align: center;
+}
+
+.intro-modal {
+	font-family: "Montserrat", "Arial", sans-serif;
 	margin: 0 auto;
 	color: white;
 	text-align: left;
 	margin-top: 25px;
-	border-radius: 5px;
-	box-shadow: 0px 0px 5px #000;
 }
 .intro-modal  h3 {
 	margin-bottom: 0;
@@ -192,16 +186,13 @@ li.encryption.active {
 .intro-modal  p {
 	line-height: 1.3em;
 }
-.intro-modal  .modal-body {
-	display: table;
-	-moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.intro-modal  .modal-body>div {
-	display: table-cell;
-}
+
+
 .intro-modal .left-side {
-	border-right : 1px solid white;
+	
+}
+.intro-modal .left-side p {
+	text-align: justify;
 }
 .intro-modal  .right-side{
 	padding-top: 20px;
@@ -211,10 +202,10 @@ li.encryption.active {
 	position: relative;
 	margin-top: 8%;
 }
-.intro-modal .right-side input{
+.intro-modal input{
 	margin-top: 5px;
 }
-.intro-modal  .right-side button{
+.intro-modal button{
 	margin-top: 5px;
 }
 .navbar-right {
